--- a/client/src/pages/Homepage/Homepage.module.css
+++ b/client/src/pages/Homepage/Homepage.module.css
@@ -1,9 +1,13 @@
 @import './../../styles/variables.css';
 
-.gridContainer {
+/* 
+    Hero 
+*/
+
+.gridHeroContainer {
     display: grid;
     grid-template-columns: repeat(12, 1fr);
-    grid-template-rows: repeat(6, 100px) ;
+    grid-template-rows: repeat(8, 100px) ;
     position: relative;
     margin: 1em auto;
     width: 100%;
@@ -11,28 +15,33 @@
     /* background-color: lightblue; */
 }
 
-.gridBottomPicture {
+.gridHeroBottomPicture {
     grid-column: 1 / span 5;
     grid-row: 1 / 7;
 }
 
-.gridBottomPicture img {
+.gridHeroBottomPicture img {
     width: 100%;
 }
 
-.gridTopPicture {
+.gridHeroTopPicture {
     grid-column: 5 / span 2;
     grid-row: 4; 
     z-index: 1; 
+    transform: translate(2rem, 1rem);
+}
+
+.gridHeroTopPicture {
+     width: 100%;
 }
 
 .mainHeader {
     font-family: var(--ff-primary);
-    font-size: 3.5rem;
+    font-size: var(--ff-h1);
     letter-spacing: 0.2rem;
     grid-column: 7 / 12;
     grid-row: 2;
-    margin: 0px;
+    margin: 0;
 }
 
 .mainHeader .mainP1 {
@@ -42,13 +51,13 @@
 }
 
 .mainHeader .mainP2 {
-    transform: translate(14rem);
+    transform: translate(20rem);
 }
 
 .mainP {
     font-family: var(--ff-secondary);
     font-size: var(--fs-body);
-    grid-column: 8 / 13;
+    grid-column: 8 / 12;
     grid-row: 4;
     transform: translate(0, 3rem);
 }
@@ -59,17 +68,161 @@
     background-color: #fff;
     grid-column: 8 / 10;
     grid-row: 6;
-    padding: 0px 0px;
+    padding: 0 0;
     height: 50%;
-    transform: translate(0, 4.6rem);
+    transform: translate(0rem, 5.7rem);
     transition-duration: 0.4s;
+    border: 2px solid #3B2D2D;
+ 
 }
 
 .btnCatalog .btnArrow {
-    padding: 0px 0px 0px 20px;
+    display: block;
+    background: url(./catalog_arrow_dark.svg) no-repeat;
+    padding: 0 0 0 1.25em;
+    color: #3B2D2D;
 }
 
 .btnCatalog:hover {
-    background-color: #fcf3f3;
+    background-color: #3B2D2D;
+    color: #fff;
 }
 
+/* 
+    Tiles
+*/
+
+.mainP3 {
+    font-family: var(--ff-primary);
+    font-size: var(--ff-h2);
+    letter-spacing: 0.1rem;
+}
+
+.gridTilesContainer {
+    display: grid;
+    grid-template-columns: repeat(9, 1fr);
+    grid-template-rows: repeat(7, 100px);
+    grid-gap: 1em;
+}
+
+.gridTilesContainer img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.gridTilesItem1 {
+    position: relative;
+    grid-column: 1 / 6;
+    grid-row: 1 / 5;
+}
+
+.gridTilesItem2 {
+    position: relative;
+    grid-column: 6 / 10;
+    grid-row: 1 / 5;
+}
+
+.gridTilesItem3 {
+    position: relative;
+    grid-column: 1 / 4;
+    grid-row: 5 / 8;
+}
+
+.gridTilesItem4 {
+    position: relative;
+    grid-column: 4 / 7;
+    grid-row: 5 / 8;
+}
+
+.gridTilesItem5 {
+    position: relative;
+    grid-column: 7 / 10;
+    grid-row: 5 / 8;
+}
+
+.btnImg {
+    width: 100%;
+    height: 100%;
+    border: none;
+    -webkit-filter: brightness(100%);
+    cursor: pointer;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+.gridTilesItem1:hover .btnImg, 
+.gridTilesItem2:hover .btnImg,
+.gridTilesItem3:hover .btnImg,
+.gridTilesItem4:hover .btnImg,
+.gridTilesItem5:hover .btnImg {
+    -webkit-filter: brightness(40%);
+    -webkit-transition: all 0.4s ease;
+    -moz-transition: all 0.4s ease;
+    -o-transition: all 0.4s ease;
+    -ms-transition: all 0.4s ease;
+    transition: all 0.4s ease;
+}
+
+.btnText {
+    position: absolute;
+    bottom: 1em;
+    left: 1em;
+    background-color: #fff;
+    color: black;
+    padding: 0.5em 1em;
+    border: none;
+    transition-duration: 0.4s;
+    font-family: var(--ff-secondary);
+    font-size: var(--fs-body);
+    cursor: pointer;
+}
+
+.btn1 {
+    background-image: url(./Rectangle\ 40.jpg);
+}
+
+.btn2 {
+    background-image: url(./Rectangle\ 39.jpg);
+}
+
+.btn3 {
+    background-image: url(./Rectangle\ 41.jpg);
+}
+
+.btn4 {
+    background-image: url(./Rectangle\ 42.jpg);
+}
+
+.btn5 {
+    background-image: url(./Rectangle\ 43.jpg);
+}
+
+.gridTilesItem1:hover .btnText,
+.gridTilesItem2:hover .btnText,
+.gridTilesItem3:hover .btnText,
+.gridTilesItem4:hover .btnText,
+.gridTilesItem5:hover .btnText {
+    background-color: #3B2D2D;
+    color: #fff;
+    transition: all 0.4s ease;
+}
+
+
+/* .btnTile {
+    position: absolute;
+    bottom: 1.5em;
+    left: 1.5em;
+    background-color: #fff;
+    color: black;
+    font-family: var(--ff-secondary);
+    font-size: var(--fs-body);
+    padding: 0.5em 1em;
+    border: none;
+    transition-duration: 0.4s;
+}
+
+.btnTile:hover {
+    color: #fff;
+    background-color: #3B2D2D;
+} */
