--- a/client/src/styles/variables.css
+++ b/client/src/styles/variables.css
@@ -2,6 +2,9 @@
     --ff-primary: 'Philosopher';
     --ff-secondary: 'Montserrat';
 
+    --ff-h1: 4rem;
+    --ff-h2: 3rem;
+
     --fs-body: 1.5rem;
     --fs-sec-body: 1.25rem;
 }
