--- a/client/src/components/footer/Footer.module.css
+++ b/client/src/components/footer/Footer.module.css
@@ -10,7 +10,9 @@
 }
 
 .footerSection {
+  height: 100%;
   justify-content: space-between;
+  align-items: flex-start;
 }
 
 .footerSection.footerLogo {
