--- a/client/src/pages/Homepage/Homepage.module.css
+++ b/client/src/pages/Homepage/Homepage.module.css
@@ -1,90 +1,90 @@
-@import './../../styles/variables.css';
+@import "./../../styles/variables.css";
 
 /* 
     Hero 
 */
 
 .gridHeroContainer {
-    display: grid;
-    grid-template-columns: repeat(12, 1fr);
-    grid-template-rows: repeat(8, 100px) ;
-    position: relative;
-    margin: 1em auto;
-    width: 100%;
-    max-width: 1600px;
+  display: grid;
+  grid-template-columns: repeat(12, 1fr);
+  grid-template-rows: repeat(8, 100px);
+  position: relative;
+  margin: 1em auto;
+  width: 100%;
+  max-width: 1600px;
 }
 
 .gridHeroBottomPicture {
-    grid-column: 1 / span 5;
-    grid-row: 1 / 7;
+  grid-column: 1 / span 5;
+  grid-row: 1 / 7;
 }
 
 .gridHeroBottomPicture img {
-    width: 100%;
+  width: 100%;
 }
 
 .gridHeroTopPicture {
-    grid-column: 5 / span 2;
-    grid-row: 4; 
-    z-index: 1; 
-    transform: translate(2rem, 1rem);
+  grid-column: 5 / span 2;
+  grid-row: 4;
+  z-index: 1;
+  transform: translate(2rem, 1rem);
 }
 
 .gridHeroTopPicture {
-     width: 100%;
+  width: 100%;
 }
 
 .mainHeader {
-    font-family: var(--ff-primary);
-    font-size: var(--fs-h1);
-    letter-spacing: 0.2rem;
-    grid-column: 7 / 12;
-    grid-row: 2;
-    margin: 0;
+  font-family: var(--ff-primary);
+  font-size: var(--fs-h1);
+  letter-spacing: 0.2rem;
+  grid-column: 7 / 12;
+  grid-row: 2;
+  margin: 0;
 }
 
 .mainHeader .mainP1 {
-    padding: 0;
-    margin: 0;
-    transform: translate(-3rem, 3rem);    
+  padding: 0;
+  margin: 0;
+  transform: translate(-3rem, 3rem);
 }
 
 .mainHeader .mainP2 {
-    transform: translate(15rem);
+  transform: translate(15rem);
 }
 
 .mainP {
-    font-family: var(--ff-secondary);
-    font-size: var(--fs-body);
-    grid-column: 8 / 12;
-    grid-row: 4;
-    transform: translate(0, 3rem);
+  font-family: var(--ff-secondary);
+  font-size: var(--fs-body);
+  grid-column: 8 / 12;
+  grid-row: 4;
+  transform: translate(0, 3rem);
 }
 
 .btnCatalog {
-    font-family: var(--ff-secondary);
-    font-size: var(--fs-sec-body);
-    background-color: #fff;
-    grid-column: 8 / 10;
-    grid-row: 6;
-    padding: 0 0;
-    height: 50%;
-    transform: translate(0rem, 5.7rem);
-    transition-duration: 0.4s;
-    border: 2px solid #3B2D2D;
-    cursor: pointer;
+  font-family: var(--ff-secondary);
+  font-size: var(--fs-sec-body);
+  background-color: #fff;
+  grid-column: 8 / 10;
+  grid-row: 6;
+  padding: 0 0;
+  height: 50%;
+  transform: translate(0rem, 5.7rem);
+  transition-duration: 0.4s;
+  border: 2px solid #3b2d2d;
+  cursor: pointer;
 }
 
-.btnCatalog .btnArrow {
+/*.btnCatalog .btnArrow {
     display: block;
     background: url(./catalog_arrow_dark.svg) no-repeat;
     padding: 0 0 0 1.25em;
     color: #3B2D2D;
-}
+}*/
 
 .btnCatalog:hover {
-    background-color: #3B2D2D;
-    color: #fff;
+  background-color: #3b2d2d;
+  color: #fff;
 }
 
 /* 
@@ -92,104 +92,103 @@
 */
 
 .mainP3 {
-    font-family: var(--ff-primary);
-    font-size: var(--fs-h2);
-    letter-spacing: 0.1rem;
+  font-family: var(--ff-primary);
+  font-size: var(--fs-h2);
+  letter-spacing: 0.1rem;
 }
 
 .gridTilesContainer {
-    display: grid;
-    grid-template-columns: repeat(9, 1fr);
-    grid-template-rows: repeat(7, 80px);
-    grid-gap: 1em;
+  display: grid;
+  grid-template-columns: repeat(9, 1fr);
+  grid-template-rows: repeat(7, 80px);
+  grid-gap: 1em;
 }
 
-
 .gridTilesItem1 {
-    position: relative;
-    grid-column: 1 / 6;
-    grid-row: 1 / 5;
+  position: relative;
+  grid-column: 1 / 6;
+  grid-row: 1 / 5;
 }
 
 .gridTilesItem2 {
-    position: relative;
-    grid-column: 6 / 10;
-    grid-row: 1 / 5;
+  position: relative;
+  grid-column: 6 / 10;
+  grid-row: 1 / 5;
 }
 
 .gridTilesItem3 {
-    position: relative;
-    grid-column: 1 / 4;
-    grid-row: 5 / 8;
+  position: relative;
+  grid-column: 1 / 4;
+  grid-row: 5 / 8;
 }
 
 .gridTilesItem4 {
-    position: relative;
-    grid-column: 4 / 7;
-    grid-row: 5 / 8;
+  position: relative;
+  grid-column: 4 / 7;
+  grid-row: 5 / 8;
 }
 
 .gridTilesItem5 {
-    position: relative;
-    grid-column: 7 / 10;
-    grid-row: 5 / 8;
+  position: relative;
+  grid-column: 7 / 10;
+  grid-row: 5 / 8;
 }
 
 .btnImg {
-    width: 100%;
-    height: 100%;
-    border: none;
-    -webkit-filter: brightness(100%);
-    cursor: pointer;
-    background-repeat: no-repeat;
-    background-size: cover;
+  width: 100%;
+  height: 100%;
+  border: none;
+  -webkit-filter: brightness(100%);
+  cursor: pointer;
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
-.gridTilesItem1:hover .btnImg, 
+.gridTilesItem1:hover .btnImg,
 .gridTilesItem2:hover .btnImg,
 .gridTilesItem3:hover .btnImg,
 .gridTilesItem4:hover .btnImg,
 .gridTilesItem5:hover .btnImg {
-    -webkit-filter: brightness(40%);
-    -webkit-transition: all 0.4s ease;
-    -moz-transition: all 0.4s ease;
-    -o-transition: all 0.4s ease;
-    -ms-transition: all 0.4s ease;
-    transition: all 0.4s ease;
+  -webkit-filter: brightness(40%);
+  -webkit-transition: all 0.4s ease;
+  -moz-transition: all 0.4s ease;
+  -o-transition: all 0.4s ease;
+  -ms-transition: all 0.4s ease;
+  transition: all 0.4s ease;
 }
 
 .btnText {
-    position: absolute;
-    bottom: 5%;
-    left: 1em;
-    background-color: #fff;
-    color: black;
-    padding: 0.5em 1em;
-    border: none;
-    transition-duration: 0.4s;
-    font-family: var(--ff-secondary);
-    font-size: var(--fs-body);
-    cursor: pointer;
+  position: absolute;
+  bottom: 5%;
+  left: 1em;
+  background-color: #fff;
+  color: black;
+  padding: 0.5em 1em;
+  border: none;
+  transition-duration: 0.4s;
+  font-family: var(--ff-secondary);
+  font-size: var(--fs-body);
+  cursor: pointer;
 }
 
 .btn1 {
-    background-image: url(./Rectangle\ 40.jpg);
+  background-image: url(./Rectangle\ 40.jpg);
 }
 
 .btn2 {
-    background-image: url(./Rectangle\ 39.jpg);
+  background-image: url(./Rectangle\ 39.jpg);
 }
 
 .btn3 {
-    background-image: url(./Rectangle\ 41.jpg);
+  background-image: url(./Rectangle\ 41.jpg);
 }
 
 .btn4 {
-    background-image: url(./Rectangle\ 42.jpg);
+  background-image: url(./Rectangle\ 42.jpg);
 }
 
 .btn5 {
-    background-image: url(./Rectangle\ 43.jpg);
+  background-image: url(./Rectangle\ 43.jpg);
 }
 
 .gridTilesItem1:hover .btnText,
@@ -197,31 +196,31 @@
 .gridTilesItem3:hover .btnText,
 .gridTilesItem4:hover .btnText,
 .gridTilesItem5:hover .btnText {
-    background-color: #3B2D2D;
-    color: #fff;
-    transition: all 0.4s ease;
+  background-color: #3b2d2d;
+  color: #fff;
+  transition: all 0.4s ease;
 }
 
 .viewAllBtn {
-    display: flex;
-    flex-direction: row;
-    justify-content: flex-end;
-    margin: 2em auto;
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-end;
+  margin: 2em auto;
 }
 
 .viewAllBtn .btn {
-    font-family: var(--ff-secondary);
-    font-size: var(--fs-sec-body);
-    background-color: #fff;
-    padding: 1em;
-    transition-duration: 0.4s;
-    border: 2px solid #3B2D2D;
-    cursor: pointer;
+  font-family: var(--ff-secondary);
+  font-size: var(--fs-sec-body);
+  background-color: #fff;
+  padding: 1em;
+  transition-duration: 0.4s;
+  border: 2px solid #3b2d2d;
+  cursor: pointer;
 }
 
 .viewAllBtn .btn:hover {
-    background-color: #3B2D2D;
-    color: #fff;
+  background-color: #3b2d2d;
+  color: #fff;
 }
 
 /* 
@@ -229,10 +228,10 @@
 */
 
 .flexAbout {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    margin: 5rem 0;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  margin: 5rem 0;
 }
 
 /* .flexAbout .flexPic {
@@ -240,21 +239,20 @@
 } */
 
 .flexAbout .flexPic img {
-    width: 100%;
+  width: 100%;
 }
 
 .flexAbout .flexText .mainP4 {
-    font-family: var(--ff-primary);
-    font-size: var(--fs-h2);
-    letter-spacing: 0.1rem;
+  font-family: var(--ff-primary);
+  font-size: var(--fs-h2);
+  letter-spacing: 0.1rem;
 }
 
 .flexAbout .flexText .text {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
-    font-family: var(--ff-secondary);
-    font-size: var(--fs-body);
-    max-width: 650px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  font-family: var(--ff-secondary);
+  font-size: var(--fs-body);
+  max-width: 650px;
 }
-
