fix: fixing arrows location

--- a/client/src/components/newProducts/NewProducts.module.css
+++ b/client/src/components/newProducts/NewProducts.module.css
@@ -19,6 +19,9 @@
 .arrows {
   display: flex;
   flex-direction: row;
-  justify-content: space-between;
   align-items: center;
+}
+
+.arrowsItem {
+  padding: 0 1.25em;
 }
