feat: add line in footer

--- a/client/src/components/footer/Footer.module.css
+++ b/client/src/components/footer/Footer.module.css
@@ -43,3 +43,11 @@
   cursor: pointer;
   line-height: 3em;
 }
+
+.line{  
+    background: white;
+    color: white;
+    /* borderColor: white; */
+    height: 3px;
+    width: 100%;
+}
