--- a/client/src/components/footer/Footer.module.css
+++ b/client/src/components/footer/Footer.module.css
@@ -45,9 +45,15 @@
 }
 
 .line{  
-    background: white;
+   background: white;
     color: white;
     /* borderColor: white; */
     height: 3px;
     width: 100%;
+}
+
+.middleContainer{
+  display: flex;
+  justify-content: space-between;
+  flex-direction: row;
 }
