feat: add style to third block list

--- a/client/src/components/footer/Footer.module.css
+++ b/client/src/components/footer/Footer.module.css
@@ -57,3 +57,11 @@
   justify-content: space-between;
   flex-direction: row;
 }
+
+.footerLink2{
+  font-size: var(--fs-sec-body);
+}
+
+.footerLink{
+  font-size: 1rem;
+}
