feat: complete layout

--- a/client/src/styles/global.css
+++ b/client/src/styles/global.css
@@ -61,6 +61,12 @@ footer {
   flex: 1 1 auto;
 }
 
+input[type=number]::-webkit-inner-spin-button, 
+input[type=number]::-webkit-outer-spin-button { 
+  -webkit-appearance: none; 
+  margin: 0; 
+}
+
 @media (max-width: 1000px) {
   .container {
     width: 80%;
